# armory_tests

./: PNGtest.7z  armory-status.xlsx  armoryPBRmat.7z  audio-multi.js  blender_cube.7z  c_trait.7z  call_wasm.7z  celshadedisplacement.7z  cubes.7z  custom_shader.7z  defaultcube.7z  forest3.7z  full-log.txt  linkedinstancing.7z  linkedinstancingcelshade.7z  mesh_generate.7z  multi-UV-suzannebraveheart.7z  nimbus_24bits.7z  particuleswithshaderbug.7z  particuleswithshaderbug2.7z  realtime layered shader.7z  rust_trait.7z  simple-cube.7z  simple-cube_ios-hl-build_mac.7z  simple-cube_ios-hl-build_windows.7z  super_texture.7z
LICENSE.md/: LICENSE.md
PNGtest/: PNGtest.blend
ammo-wasm/: BulletWebGL Demo.URL  worker.wasm.js
animation-android-adreno-bug/: khafile.js  link.7z
animation-android-adreno-bug/Sources/: Main.hx
animation-android-adreno-bug/build_link/: link-html5.hxproj  link_1_0_2-html5.hxproj  project-html5.hxml
animation-android-adreno-bug/build_link/html5/: action_Link Zelda_Waving.arm  kha.js  mesh_Link Zelda.arm
animation-android-adreno-bug/build_link/html5-resources/: Mt_Armcover_116_001_001_armskin_mesh-webgl2.frag.essl  Mt_Armcover_116_001_001_armskin_mesh-webgl2.vert.essl  Mt_Belt_A_001_armskin_mesh-webgl2.frag.essl  Mt_Belt_B_116_001_armskin_mesh-webgl2.frag.essl  Mt_Belt_C_001_armskin_mesh-webgl2.frag.essl  Mt_Earring_001_armskin_mesh-webgl2.frag.essl  Mt_Eyeball_L_001_armskin_mesh-webgl2.frag.essl  Mt_Eyeball_L_001_armskin_mesh-webgl2.vert.essl  Mt_Eyeball_R_001_armskin_mesh-webgl2.frag.essl  Mt_Eyelashes_001_armskin_mesh-webgl2.frag.essl  Mt_Face_001_001_armskin_mesh-webgl2.frag.essl  Mt_Gauntlets_116_001_armskin_mesh-webgl2.frag.essl  Mt_Glove_116_001_armskin_mesh-webgl2.frag.essl  Mt_Hair_001_armskin_mesh-webgl2.frag.essl  Mt_Hairband_001_armskin_mesh-webgl2.frag.essl  Mt_Lower_001_001_armskin_mesh-webgl2.frag.essl  Mt_Tunic_116_001_001_armskin_mesh-webgl2.frag.essl  Mt_UnderShirts_116_001_001_armskin_mesh-webgl2.frag.essl  World_World-webgl2.frag.essl  armdefault_mesh-webgl2.frag.essl  files.json
animation-android-adreno-bug/build_link/temp/: cache.json
armoryPBRmat/: armoryPBRmat.blend  armoryPBRmat.blend1  khafile.js
armoryPBRmat/Sources/: Main.hx
blender_cube/: blender_cube.blend  blender_cube.blend1  khafile.js
blender_cube/Sources/: Main.hx
blender_cube/build_blender_cube/: blender_cube-html5.hxproj  project-html5.hxml
celshadedisplacement/: celshadedisplacement.blend  desktopdisplacementnew.blend  khafile.js
celshadedisplacement/Sources/: Main.hx
cubes/: aug08cube.blend  aug08cube.blend1  june06cube.blend  june06cube.blend1  june08cube.blend  khafile.js
cubes/Sources/: Main.hx
cubes/aug08cube/: index.html
cubes/build_aug08cube/: aug08cube_1_0_0-html5.hxproj  project-html5.hxml
cubes/build_june06cube/: june06cube_1_0_0-html5.hxproj  june06cube_1_0_2-html5.hxproj  project-html5.hxml
cubes/build_june08cube/: june08cube_1_0_1-html5.hxproj
custom_shader/: README.md  custom_shader.blend  khafile.js
custom_shader/Shaders/: GrassMaterial.frag.glsl  GrassMaterial.vert.glsl
custom_shader/Sources/: Main.hx
defaultcube/: defaultcube.blend  khafile.js
defaultcube/Sources/: Main.hx
defaultcube/build_defaultcube/: defaultcube_1_0_3-html5.hxproj  defaultcube_1_0_6-html5.hxproj  project-html5.hxml
forest3/: khafile.js
forest3/Sources/: Main.hx
gamepad-tester/: gamepad-tester.blend  khafile.js  tech.kode.kore-link2sd.apk
gamepad-tester/Sources/: Main.hx
gamepad-tester/build_gamepad-tester/: gamepad-tester-android-hl.hxproj  gamepad-tester-html5.hxproj  kincfile.js  project-android-hl.hxml  project-html5.hxml
linkedinstancing/: khafile.js  libraryassests.blend  scene.blend
linkedinstancing/Sources/: Main.hx
linkedinstancing/build_scene/: project-html5.hxml  scene_1_0_3-html5.hxproj  scene_1_0_6-html5.hxproj
linkedinstancing/html5/: AssetSketcher_lib.arm  Scene.arm  blue_libraryassests_blend_data.arm  mesh_Cone_libraryassests.blend.arm  mesh_Cube_libraryassests.blend.arm
linkedinstancingcelshade/: khafile.js  scene.blend  scenecelshade.blend
linkedinstancingcelshade/Sources/: Main.hx
linkedinstancingcelshade/build_scene/: project-html5.hxml  scene_1_0_7-html5.hxproj
linkedinstancingcelshade/html5/: Material_001_data.arm  mesh_Cylinder_libraryassests.blend.arm
mesh_generate/: generate_mesh.blend
mesh_generate/Sources/: Main.hx
multi-UV-suzannebraveheart/: khafile.js  multi-UV-suzannebraveheart.blend
multi-UV-suzannebraveheart/Sources/: Main.hx
nimbus_24bits/: khafile.js  nimbus_24bits.blend  nimbus_24bits.blend1  nimbus_24bits.psd  nimbus_24bits2.blend
nimbus_24bits/Sources/: Main.hx
particuleswithshaderbug/: particuleswithshaderbug.blend  test2.blend
realtime layered shader/: realtime layered shader.blend
shadowscelshadetest/: buildshadowscelshadetest.7z  shadowscelshadetest.7z  shadowscelshadetest2.7z
shadowscelshadetest/buildshadowscelshadetest/: krom.js
shadowscelshadetest/shadowscelshadetest/: khafile.js  shadowscelshadetest.blend
shadowscelshadetest/shadowscelshadetest2/: khafile.js  shadowscelshadetest.blend  shadowscelshadetest.blend1
simple-cube/: khafile.js  simple-cube.blend
simple-cube/Sources/: Main.hx
simple-cube/build_simple-cube/: kincfile.js  project-html5.hxml  project-ios-hl.hxml  untitled-html5.hxproj  untitled-ios-hl.hxproj
super_texture/: khafile.js  shader_issues.txt  super_texture.blend  super_texture.blend1
super_texture/Sources/: Main.hx
ui-streching/: khafile.js  tech.kode.kore-link2sd.apk  ui-streching.blend
ui-streching/Sources/: Main.hx
ui-streching/build_ui-streching/: kincfile.js  project-android-hl.hxml  ui-streching-android-hl.hxproj
ui-streching/build_ui-streching/android-hl-build/ui-streching/app/: CMakeLists.txt  build.gradle
ui-streching/build_ui-streching/android-hl-build/ui-streching/app/src/main/: AndroidManifest.xml
ui-streching/build_ui-streching/android-hl-build/ui-streching/app/src/main/assets/: MyCanvas.json
ui-streching/build_ui-streching/android-hl-build/ui-streching/app/src/main/res/values/: strings.xml
(+1371 files in other folders)
