cmake_minimum_required(VERSION 3.4.1)

set(CMAKE_C_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DHXCPP_API_LEVEL=400 -DHXCPP_DEBUG -DHXCPP_GC_GENERATIONAL -DKORE_MULTITHREADED_AUDIO -DKORE -DKOREC -DROTATE90 -DLIBHL_STATIC -DKORE_G1 -DKORE_G2 -DKORE_G3 -DKORE_A1 -DKORE_A2 -DKORE_ANDROID -DKORE_OPENGL -DKORE_OPENGL_ES -DKORE_ANDROID_API=15 -DKORE_POSIX -DKORE_G4 -DKORE_G5 -DKORE_G5ONG4 -DKORE_A3")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DHXCPP_API_LEVEL=400 -DHXCPP_DEBUG -DHXCPP_GC_GENERATIONAL -DKORE_MULTITHREADED_AUDIO -DKORE -DKOREC -DROTATE90 -DLIBHL_STATIC -DKORE_G1 -DKORE_G2 -DKORE_G3 -DKORE_A1 -DKORE_A2 -DKORE_ANDROID -DKORE_OPENGL -DKORE_OPENGL_ES -DKORE_ANDROID_API=15 -DKORE_POSIX -DKORE_G4 -DKORE_G5 -DKORE_G5ONG4 -DKORE_A3")
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DHXCPP_API_LEVEL=400 -DHXCPP_GC_GENERATIONAL -DKORE_MULTITHREADED_AUDIO -DKORE -DKOREC -DROTATE90 -DLIBHL_STATIC -DKORE_G1 -DKORE_G2 -DKORE_G3 -DKORE_A1 -DKORE_A2 -DKORE_ANDROID -DKORE_OPENGL -DKORE_OPENGL_ES -DKORE_ANDROID_API=15 -DKORE_POSIX -DKORE_G4 -DKORE_G5 -DKORE_G5ONG4 -DKORE_A3")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DHXCPP_API_LEVEL=400 -DHXCPP_GC_GENERATIONAL -DKORE_MULTITHREADED_AUDIO -DKORE -DKOREC -DROTATE90 -DLIBHL_STATIC -DKORE_G1 -DKORE_G2 -DKORE_G3 -DKORE_A1 -DKORE_A2 -DKORE_ANDROID -DKORE_OPENGL -DKORE_OPENGL_ES -DKORE_ANDROID_API=15 -DKORE_POSIX -DKORE_G4 -DKORE_G5 -DKORE_G5ONG4 -DKORE_A3")

include_directories(
  "C:/Users/devWin10/Downloads/ui-streching/build_ui-streching/android-hl-build"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/include/pcre"
  "C:/armorySDK1911default/Kha/Kinc/Sources"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/Android/Sources"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/POSIX/Sources"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics5/G5onG4/Sources"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Audio3/A3onA2/Sources"
)

add_library(
  kore
  SHARED
  "C:/Users/devWin10/Downloads/ui-streching/build_ui-streching/android-hl-build/kore_sources.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/include/pcre/config.h"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/include/pcre/pcre.h"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/include/pcre/pcre16_ord2utf16.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/include/pcre/pcre16_valid_utf16.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/include/pcre/pcre_chartables.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/include/pcre/pcre_compile.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/include/pcre/pcre_dfa_exec.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/include/pcre/pcre_exec.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/include/pcre/pcre_fullinfo.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/include/pcre/pcre_globals.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/include/pcre/pcre_internal.h"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/include/pcre/pcre_newline.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/include/pcre/pcre_string_utils.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/include/pcre/pcre_tables.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/include/pcre/pcre_ucd.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/include/pcre/pcre_xclass.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/include/pcre/ucp.h"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/alloc.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/hl.h"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/hlc.h"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/hlmodule.h"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/opcodes.h"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/std/array.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/std/buffer.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/std/bytes.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/std/cast.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/std/date.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/std/error.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/std/file.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/std/fun.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/std/maps.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/std/maps.h"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/std/math.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/std/obj.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/std/process.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/std/random.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/std/regexp.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/std/socket.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/std/sort.h"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/std/string.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/std/sys.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/std/sys_android.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/std/thread.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/std/track.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/std/types.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/std/ucs2.c"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/hl/src/std/unicase.h"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/KoreC/arrays.cpp"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/KoreC/compute.cpp"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/KoreC/cubemap.cpp"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/KoreC/display.cpp"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/KoreC/graphics.cpp"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/KoreC/indexbuffer.cpp"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/KoreC/kore.cpp"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/KoreC/shader.cpp"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/KoreC/sound.cpp"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/KoreC/system.cpp"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/KoreC/texture.cpp"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/KoreC/vertexbuffer.cpp"
  "C:/armorySDK1911default/Kha/Backends/KoreHL/KoreC/video.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Audio3/A3onA2/Sources/Kore/Audio.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Audio3/A3onA2/Sources/Kore/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Audio3/A3onA2/Sources/Kore/TextToSpeech.winrt.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/GL/eglew.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/GL/glew.c"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/GL/glew.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/GL/glxew.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/GL/wglew.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/ComputeImpl.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/ComputeImpl.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/GraphicsImpl.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/IndexBufferImpl.c"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/IndexBufferImpl.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/ogl.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/OpenGL.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/OpenGL.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/OpenGLWindow.c"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/OpenGLWindow.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/PipelineStateImpl.c"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/PipelineStateImpl.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/RenderTargetAndroid.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/RenderTargetImpl.c"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/RenderTargetImpl.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/ShaderImpl.c"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/ShaderImpl.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/ShaderStorageBufferImpl.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/ShaderStorageBufferImpl.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/TextureArrayImpl.c"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/TextureArrayImpl.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/TextureImpl.c"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/TextureImpl.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/VertexBufferImpl.c"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/VertexBufferImpl.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics4/OpenGL/Sources/Kore/VrInterface.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics5/G5onG4/Sources/Kore/CommandList5Impl.c"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics5/G5onG4/Sources/Kore/CommandList5Impl.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics5/G5onG4/Sources/Kore/ConstantBuffer5Impl.c"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics5/G5onG4/Sources/Kore/ConstantBuffer5Impl.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics5/G5onG4/Sources/Kore/G5onG4.c"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics5/G5onG4/Sources/Kore/G5onG4.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics5/G5onG4/Sources/Kore/Graphics5Impl.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics5/G5onG4/Sources/Kore/IndexBuffer5Impl.c"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics5/G5onG4/Sources/Kore/IndexBuffer5Impl.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics5/G5onG4/Sources/Kore/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics5/G5onG4/Sources/Kore/PipelineState5Impl.c"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics5/G5onG4/Sources/Kore/PipelineState5Impl.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics5/G5onG4/Sources/Kore/RenderTarget5Impl.c"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics5/G5onG4/Sources/Kore/RenderTarget5Impl.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics5/G5onG4/Sources/Kore/Shader5Impl.c"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics5/G5onG4/Sources/Kore/Shader5Impl.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics5/G5onG4/Sources/Kore/Texture5Impl.c"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics5/G5onG4/Sources/Kore/Texture5Impl.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics5/G5onG4/Sources/Kore/VertexBuffer5Impl.c"
  "C:/armorySDK1911default/Kha/Kinc/Backends/Graphics5/G5onG4/Sources/Kore/VertexBuffer5Impl.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/Android/Sources/android_native_app_glue.c"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/Android/Sources/android_native_app_glue.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/Android/Sources/gl3stub.c"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/Android/Sources/gl3stub.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/Android/Sources/GLContext.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/Android/Sources/GLContext.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/Android/Sources/JNIHelper.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/Android/Sources/JNIHelper.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/Android/Sources/Kore/Android.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/Android/Sources/Kore/Audio.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/Android/Sources/Kore/Display.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/Android/Sources/Kore/DisplayData.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/Android/Sources/Kore/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/Android/Sources/Kore/System.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/Android/Sources/Kore/Video.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/Android/Sources/Kore/Video.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/Android/Sources/Kore/VideoSoundStream.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/Android/Sources/Kore/Window.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/Android/Sources/Kore/WindowData.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/Android/Sources/Kore/Vr/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/Android/Sources/Kore/Vr/VrInterface.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/Android/Sources/Kore/Vr/VrInterface.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/POSIX/Sources/Kore/AtomicImpl.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/POSIX/Sources/Kore/Event.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/POSIX/Sources/Kore/EventImpl.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/POSIX/Sources/Kore/Mutex.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/POSIX/Sources/Kore/MutexImpl.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/POSIX/Sources/Kore/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/POSIX/Sources/Kore/Semaphore.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/POSIX/Sources/Kore/SemaphoreImpl.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/POSIX/Sources/Kore/Thread.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/POSIX/Sources/Kore/ThreadImpl.h"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/POSIX/Sources/Kore/ThreadLocal.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Backends/System/POSIX/Sources/Kore/ThreadLocalImpl.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/bridge.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/bridge.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/color.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/color.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/display.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/error.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/error.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/image.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/image.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/log.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/log.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/system.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/system.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/window.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/window.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/audio1/audio.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/audio1/audio.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/audio1/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/audio1/sound.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/audio1/sound.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/audio1/soundstream.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/audio1/soundstream.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/audio1/stb_vorbis.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/audio2/audio.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/audio2/audio.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/audio2/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/compute/compute.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics1/graphics.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics1/graphics.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics1/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics4/constantlocation.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics4/graphics.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics4/graphics.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics4/indexbuffer.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics4/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics4/pipeline.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics4/pipeline.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics4/rendertarget.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics4/shader.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics4/texture.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics4/texturearray.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics4/textureunit.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics4/vertexbuffer.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics4/vertexbuffer.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics4/vertexstructure.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics5/commandlist.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics5/commandlist.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics5/constantbuffer.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics5/constantbuffer.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics5/constantlocation.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics5/graphics.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics5/graphics.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics5/indexbuffer.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics5/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics5/pipeline.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics5/pipeline.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics5/raytrace.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics5/rendertarget.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics5/shader.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics5/texture.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics5/texture.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics5/textureunit.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics5/vertexbuffer.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/graphics5/vertexstructure.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/input/acceleration.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/input/acceleration.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/input/gamepad.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/input/gamepad.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/input/keyboard.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/input/keyboard.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/input/mouse.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/input/mouse.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/input/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/input/pen.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/input/pen.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/input/rotation.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/input/rotation.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/input/surface.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/input/surface.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/io/filereader.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/io/filereader.winrt.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/io/filewriter.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/io/filewriter.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/io/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/io/lz4/lz4.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/io/lz4/lz4.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/io/lz4/lz4frame.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/io/lz4/lz4frame.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/io/lz4/lz4frame_static.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/io/lz4/lz4hc.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/io/lz4/lz4hc.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/io/lz4/lz4opt.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/io/lz4/xxhash.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/io/lz4/xxhash.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/libs/stb_image.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/math/core.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/math/core.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/math/matrix.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/math/matrix.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/math/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/math/random.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/math/random.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/math/vector.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/network/http.c"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/network/http.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/network/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/network/socket.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/network/socket.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/simd/float32x4.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/threads/atomic.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/threads/event.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/threads/fiber.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/threads/mutex.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/threads/semaphore.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/threads/thread.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/kinc/threads/threadlocal.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Convert.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Convert.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Display.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Display.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Error.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Error.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/ErrorArgs.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Log.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Log.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/LogArgs.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/System.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/System.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Window.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Window.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Audio1/Audio.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Audio1/Audio.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Audio1/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Audio1/Sound.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Audio1/Sound.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Audio1/SoundStream.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Audio1/SoundStream.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Audio2/Audio.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Audio2/Audio.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Audio2/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Audio3/Audio.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Audio3/Audio.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Audio3/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Audio3/TextToSpeech.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Compute/Compute.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Compute/Compute.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Compute/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics1/Color.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics1/Color.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics1/Graphics.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics1/Graphics.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics1/Image.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics1/Image.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics1/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics2/Graphics.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics2/Graphics.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics2/Kravur.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics2/Kravur.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics2/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics3/Graphics.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics3/Graphics.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics3/Light.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics3/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics3/Texture.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics3/Texture.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics4/Graphics.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics4/Graphics.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics4/IndexBuffer.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics4/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics4/PipelineState.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics4/PipelineState.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics4/RenderTarget.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics4/Shader.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics4/Shader.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics4/Texture.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics4/Texture.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics4/TextureArray.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics4/TextureArray.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics4/VertexBuffer.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics4/VertexStructure.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics5/CommandList.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics5/CommandList.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics5/ConstantBuffer.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics5/ConstantBuffer.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics5/Graphics.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics5/Graphics.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics5/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics5/PipelineState.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics5/PipelineState.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics5/RayTrace.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics5/Shader.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics5/Texture.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics5/Texture.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Graphics5/VertexStructure.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Input/Gamepad.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Input/Gamepad.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Input/Keyboard.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Input/Keyboard.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Input/Mouse.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Input/Mouse.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Input/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Input/Pen.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Input/Pen.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Input/Sensor.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Input/Sensor.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Input/Surface.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Input/Surface.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/IO/BufferReader.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/IO/BufferReader.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/IO/FileReader.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/IO/FileReader.winrt.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/IO/FileWriter.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/IO/FileWriter.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/IO/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/IO/Reader.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/IO/Reader.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/IO/Writer.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/IO/Writer.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Math/Core.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Math/Core.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Math/Matrix.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Math/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Math/Quaternion.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Math/Quaternion.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Math/Random.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Math/Random.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Math/Vector.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Network/Connection.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Network/Connection.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Network/Http.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Network/Http.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Network/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Network/Socket.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Network/Socket.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Simd/float32x4.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Threads/Atomic.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Threads/Event.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Threads/Event.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Threads/Mutex.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Threads/Mutex.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Threads/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Threads/Semaphore.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Threads/Semaphore.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Threads/Thread.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Threads/Thread.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Threads/ThreadLocal.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Threads/ThreadLocal.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Vr/CameraImage.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Vr/CameraImage.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Vr/pch.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Vr/SensorState.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Vr/SensorState.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Vr/VrInterface.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Vr/VrPose.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Vr/VrPose.h"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Vr/VrPoseState.cpp"
  "C:/armorySDK1911default/Kha/Kinc/Sources/Kore/Vr/VrPoseState.h"
)

find_library(log-lib log)
find_library(android-lib android)
find_library(EGL-lib EGL)
find_library(GLESv2-lib GLESv2)
find_library(OpenSLES-lib OpenSLES)
find_library(OpenMAXAL-lib OpenMAXAL)

target_link_libraries(
  kore
  ${log-lib}
  ${android-lib}
  ${EGL-lib}
  ${GLESv2-lib}
  ${OpenSLES-lib}
  ${OpenMAXAL-lib}
)
